# dbt-toolkit

./: .coveragerc  .flake8  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: publish-package.yaml  run-code-checks.yaml  run-tests.yaml
src/dbttoolkit/: cli.py
src/dbttoolkit/dbt_cloud/: README.md
src/dbttoolkit/dbt_cloud/actions/: __init__.py  __main__.py  _docs.py  retrieve_artifacts_time_interval.py  retrieve_most_recent_artifact.py
src/dbttoolkit/dbt_cloud/clients/: dbt_cloud_client.py
src/dbttoolkit/dbt_cloud/models/: dbt_artifact.py
src/dbttoolkit/documentation/: README.md
src/dbttoolkit/documentation/actions/: __init__.py  __main__.py  propagate.py
src/dbttoolkit/documentation/models/: column.py
src/dbttoolkit/documentation/presentation/: formatters.py  stats.py
src/dbttoolkit/utils/: io.py  logger.py
tests/: README.md
tests/_fixtures/dbt_sample_project/: .gitignore  dbt_project.yml  docker-compose.yaml  postgres_schema.sql
tests/_fixtures/dbt_sample_project/models/: mart_user.sql  mart_user_and_city.sql  schema.yml  stg_city.sql  stg_user.sql
tests/dbt_cloud/: conftest.py
tests/dbt_cloud/actions/: test_retrieve_most_recent_artifact.py
tests/documentation/: conftest.py
tests/documentation/actions/: test_propagate.py
tests/documentation/presentation/: test_formatters.py
