[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]
write_to = "src/dbttoolkit/_version.py"
write_to_template = '__version__ = "{version}"'
local_scheme = "no-local-version"
fallback_version = "0+unknown.scm_missing"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
exclude = '''
/(
  | venv
)/
'''

[tool.isort]
line_length = 120
profile = "black"
